Rooms 	- allow Add Special Use Room only when external rooms are populated for the given session 	- added add any room capability (admin only, available only when there are no external rooms for the given session)